--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,113 +1,105 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<android.support.v4.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <android.support.v4.widget.NestedScrollView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:weightSum="1">
+
+        <ImageView
+            android:id="@+id/user_image"
+            android:layout_width="202dp"
+            android:layout_height="0dp"
+            android:layout_weight="1.60"
+            app:srcCompat="@drawable/common_google_signin_btn_icon_dark"/>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="1">
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/user_image"
-                android:layout_width="202dp"
-                android:layout_height="202dp"
-                android:layout_weight="1.60"
-                app:srcCompat="@drawable/common_google_signin_btn_icon_dark"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/label_user_private"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:text="@string/private_tattoos"/>
 
-                <TextView
-                    android:id="@+id/label_user_private"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/private_tattoos"/>
-
-                <Button
-                    android:text="@string/see_more"
-                    android:layout_width="159dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/see_more_private"/>
-            </LinearLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
+            <Button
+                android:text="@string/see_more"
+                android:layout_width="159dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_private_list"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/label_user_public"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/public_tattoos"/>
-
-                <Button
-                    android:text="@string/see_more"
-                    android:layout_width="159dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/see_more_public"/>
-            </LinearLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/user_public_list"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/label_user_liked"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/liked_tattoos"/>
-
-                <Button
-                    android:text="@string/see_more"
-                    android:layout_width="159dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/see_more_liked"/>
-            </LinearLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/user_liked_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </android.support.v7.widget.RecyclerView>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_upload"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|bottom"
-                android:layout_margin="@dimen/fab_margin"
-                android:src="@drawable/ic_file_upload_black_24dp"/>
-
+                android:id="@+id/see_more_private"/>
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_private_list"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-</FrameLayout>
+            <TextView
+                android:id="@+id/label_user_public"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/public_tattoos"/>
+
+            <Button
+                android:text="@string/see_more"
+                android:layout_width="159dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/see_more_public"/>
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/user_public_list"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_user_liked"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/liked_tattoos"/>
+
+            <Button
+                android:text="@string/see_more"
+                android:layout_width="159dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/see_more_liked"/>
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/user_liked_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_upload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_file_upload_black_24dp"/>
+
+    </LinearLayout>
+
+</android.support.v4.widget.NestedScrollView>
+
