--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,13 @@
     <item
         android:id="@+id/search"
         android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView"
+        android:title="@string/search"/>
+    <item
+        android:id="@+id/profile"
+        android:icon="@drawable/ic_person_white_24px"
+        android:tint="@color/colorPrimary"
+        app:showAsAction="ifRoom"
         android:title="@string/search"/>
 </menu>
