--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,12 +10,21 @@
         android:layout_height="wrap_content"
         android:weightSum="1">
 
-        <ImageView
-            android:id="@+id/user_image"
-            android:layout_width="202dp"
-            android:layout_height="0dp"
-            android:layout_weight="1.60"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_dark"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ToolBarStyle"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+        <!--<ImageView-->
+            <!--android:id="@+id/user_image"-->
+            <!--android:layout_width="202dp"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1.60"-->
+            <!--app:srcCompat="@drawable/common_google_signin_btn_icon_dark"/>-->
 
         <LinearLayout
             android:layout_width="match_parent"
