--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -53,7 +53,9 @@
             android:layout_below="@+id/recent_list"
             android:layout_marginRight="8dp"
             android:layout_marginTop="23dp"
-            android:text="@string/see_more"/>
+            android:text="@string/see_more"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/seemore_button"/>
 
 
         <android.support.v7.widget.RecyclerView
