--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="colorDark">#3c1b0e</color>
     <color name="colorPurple">#4b1b61</color>
     <color name="colorPink">#c75ba5</color>
+    <color name="colorPureWhite">#FFFFFF</color>
+
+
 
 
 
