--- a/app/src/main/res/layout/fragment_tattoo_item.xml
+++ b/app/src/main/res/layout/fragment_tattoo_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="wrap_content"
-              android:layout_height="match_parent">
+              android:padding="10dp"
+              android:layout_width="150dp"
+              android:layout_height="150dp">
 
     <ImageView
         android:id="@+id/item_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="centerInside"
-        android:gravity="end|center_vertical"
-        android:padding="10dp"
+        android:gravity="center"
         app:srcCompat="@mipmap/ic_launcher"
         android:background="@android:color/transparent"
         android:contentDescription="@string/tattoo_description"/>
