--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -5,8 +5,7 @@
     android:thicknessRatio="1.9"
     android:useLevel="false" >
     <solid android:color="@android:color/transparent" />
-
     <stroke
         android:width="10dp"
-        android:color="@android:color/white" />
+        android:color="@android:color/black" />
 </shape>
