--- a/app/src/main/res/layout/activity_tattoo.xml
+++ b/app/src/main/res/layout/activity_tattoo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="643dp"
@@ -19,15 +20,39 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="30dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="10dp"
-                    tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused"/>
+                <android.support.v7.widget.CardView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    tools:elevation="12dp"
+                    android:id="@+id/view2"
+                    tools:cardCornerRadius="40dp"
+                    android:innerRadius="0dp"
+                    android:shape="ring"
+                    android:layout_marginStart="30dp"
+                    android:thicknessRatio="1.9">
+                    <ImageView
+                        android:layout_height="80dp"
+                        android:layout_width="match_parent"
+                        android:id="@+id/user_image"
+                        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true">
+                    </ImageView>
+                </android.support.v7.widget.CardView>
+
+                <!--<ImageView-->
+                    <!--android:id="@+id/user_image"-->
+                    <!--android:background="@drawable/circ_img"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_marginEnd="10dp"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:adjustViewBounds="true"-->
+                    <!--tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused"/>-->
 
                 <TextView
                     android:id="@+id/owner_name"
@@ -44,45 +69,56 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="fitCenter"
-                android:layout_margin="5dp"
                 android:adjustViewBounds="true"
+                android:layout_margin="5dp"
                 android:background="@android:color/transparent"
                 tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
                 android:contentDescription="@string/tattoo_description"/>
-
-            <ListView
-                android:id="@+id/tag_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </ListView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <com.like.LikeButton
+                    android:id="@+id/like_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:anim_scale_factor="3"
+                    app:icon_size="30dp"
+                    app:icon_type="heart"
+                    android:layout_gravity="start|center"
+                    app:is_enabled="true"/>
+
                 <TextView
                     android:id="@+id/like_count"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_gravity="start|center"
                     android:text="Likes:"/>
 
-                <Button
-                    android:id="@+id/like_button"
-                    android:layout_width="wrap_content"
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab_camera"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.1"
-                    android:text="Like"/>
+                    android:layout_gravity="end|bottom"
+                    android:layout_margin="@dimen/fab_margin"
+                    android:src="@android:drawable/ic_menu_camera"/>
+
+                <!--<Button-->
+                <!--android:id="@+id/like_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="0.1"-->
+                <!--android:text="Like"/>-->
             </LinearLayout>
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_camera"
+            <ListView
+                android:id="@+id/tag_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|bottom"
-                android:layout_margin="@dimen/fab_margin"
-                android:src="@android:drawable/ic_menu_camera"/>
+                android:layout_height="wrap_content">
+            </ListView>
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
